tests/NormalTests/paczka1/small_fuzzy/94183402.err
Error in line 2: 5xNG67Zp1 S793 0,2
Error in line 9: U5i5axz A853 58,1
Error in line 12: U5i5axz S491 23,5
Error in line 11: ZtR8AWUvqI0 S793 77,4
